# geolake

./: .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yaml  mkdocs.yaml
api/: Dockerfile  requirements.txt
backup/: Dockerfile  do_backup.sh
broker/: Dockerfile  requirements.txt
catalog/: README.md  cache.py  catalog.yaml  era5_downscaled.yaml  sentinel.yaml
client/: pyproject.toml
datastore/: Dockerfile  datastore.py  requirements.txt  singleton.py  util.py
db/: Dockerfile
docs/: about.md  api.md  base.md  broker.md  datastore.md  executor.md  index.md  iot.md  mkdocs.yaml  netcdf.md  queries.md  sentinel.md  wrf.md
drivers/: Dockerfile  Makefile  README.md  pyproject.toml  setup.py
drivers/geolake_drivers/: _version.py  base.py  geoquery.py  netcdf.py  sentinel.py  wrf.py
drivers/intake_geokube/: __init__.py  base.py  netcdf.py  sentinel.py  utils.py  version.py  wrf.py
drivers/intake_geokube/builders/: __init__.py
drivers/intake_geokube/iot/: __init__.py  driver.py
drivers/intake_geokube/netcdf/: __init__.py  driver.py
drivers/intake_geokube/queries/: __init__.py  geoquery.py  types.py  utils.py  workflow.py
drivers/intake_geokube/sentinel/: __init__.py  auth.py  driver.py  odata_builder.py
drivers/intake_geokube/wrf/: __init__.py  driver.py
drivers/tests/: test_geoquery.py  test_intake_geokube.py
drivers/tests/queries/: test_utils.py  test_workflow.py
drivers/tests/resources/: test_catalog.yaml
drivers/tests/sentinel/: fixture.py  test_builder.py  test_driver.py
executor/: Dockerfile  requirements.txt
geokube_packages/: Dockerfile  environment.yaml  geokube-0.1a0-py3-none-any.whl  geokube-0.1b1-py3-none-any.whl  geokube-0.2a0-py3-none-any.whl  geokube-0.2a0-py3-none-any.whl.bkp2  intake_geokube-0.1a0-py3-none-any.whl
geoquery/: geoquery.py
kubernetes/: api-deployment.yaml  api-service.yaml  backup-cronjob.yaml  broker-config.yaml  broker-deployment.yaml  broker-service.yaml  db-claim0-persistentvolumeclaim.yaml  db-deployment.yaml  db-service.yaml  downloads-persistentvolumeclaim.yaml  executor-deployment.yaml  prometheus-configmap.yaml  secrets.yaml  virtualserver.yaml  web-deployment.yaml  web-service.yaml
site/: 404.html  about.html  api.html  base.html  broker.html  datastore.html  executor.html  index.html  installation.html  iot.html  netcdf.html  objects.inv  queries.html  sentinel.html  (+1 more)
(+201 files in other folders)
